# ffxiv-types-cn

./: Cargo.toml  README.md
src/: clans.rs  data_centers.rs  errors.rs  guardians.rs  jobs.rs  lib.rs  races.rs  roles.rs  worlds.rs
src/jobs/: classification.rs  combat.rs  mod.rs  non_combat.rs
