[package]
name = "ffxiv_types"
version = "0.2.0"
authors = ["Kyle Clemens <git@kyleclemens.com>"]
description = "Useful types for FFXIV-related projects"
documentation = "https://docs.rs/ffxiv_types"
repository = "https://github.com/jkcclemens/ffxiv_types"
license = "MIT"

[features]
default = ["jobs", "roles", "data_centers", "worlds", "all_const"]

# Every type
all_const = []

# Job-related
jobs = ["combat_jobs", "non_combat_jobs", "job_classifications"]
combat_jobs = []
non_combat_jobs = []
job_classifications = []

# Roles
roles = []

# World-related
data_centers = []
worlds = []

# Serde support
with_serde = ["serde", "serde_derive"]

[dependencies]
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
